updated URL cleaning - http vs https. Updated atom smasher and bounce apps.
Former-commit-id: 3c99f31963a0273f04e0657f4c5e61f55da1dfde

--- a/public/display.html
+++ b/public/display.html
@@ -178,12 +178,16 @@
 		
 		wsio.on('setupDisplayConfiguration', function(json_cfg) {
 			var i;
-
-			if(window.location.hostname !== json_cfg.host)
-				hostAlias[json_cfg.host] = window.location.hostname;
-			for(i=0; i<json_cfg.alternate_hosts.length; i++){
-				if(window.location.hostname !== json_cfg.alternate_hosts[i])
-					hostAlias[json_cfg.alternate_hosts[i]] = window.location.hostname;
+			var http_port;
+			var https_port;
+			
+			http_port = json_cfg.index_port === "80" ? "" : ":"+json_cfg.index_port;
+			https_port = json_cfg.port === "443" ? "" : ":"+json_cfg.port;
+			hostAlias["http://"  + json_cfg.host + http_port]  = window.location.origin;
+			hostAlias["https://" + json_cfg.host + https_port] = window.location.origin;
+			for(i=0; i<json_cfg.alternate_hosts.length; i++) {
+				hostAlias["http://"  + json_cfg.alternate_hosts[i] + http_port]  = window.location.origin;
+				hostAlias["https://" + json_cfg.alternate_hosts[i] + https_port] = window.location.origin;
 			}
 
 			// Build the elements visible on the wall
