fixed issues with decoding one frame (on load and seek)
Former-commit-id: bc9a5d0f6c91b1d1bbe10d57d31ed214e5a011ec

--- a/public/display.html
+++ b/public/display.html
@@ -468,6 +468,7 @@
 							controlItems[data.id + "_controls"] = { show:false, handle:app};
 					} 
 					if(data.animation === true) wsio.emit('finishedRenderingAppFrame', {id: data.id});
+					if(data.application === "movie_player") setTimeout(function() {wsio.emit('requestVideoFrame', {id: data.id});}, 500);
 				}
 			};
 			
