--- a/public/audioManager.html
+++ b/public/audioManager.html
@@ -188,31 +188,42 @@
 		});
 		
 		wsio.on('videoPlaying', function(data) {
-			document.getElementById(data.id).play();
-			document.getElementById(data.id + "_play").textContent = "Playing";
+			var vid      = document.getElementById(data.id);
+			var vid_play = document.getElementById(data.id + "_play");
+			if(vid)      vid.play();
+			if(vid_play) vid_play.textContent = "Playing";
 		});
 		
 		wsio.on('videoPaused', function(data) {
-			document.getElementById(data.id).pause();
-			document.getElementById(data.id + "_play").textContent = "Paused";
+			var vid      = document.getElementById(data.id);
+			var vid_play = document.getElementById(data.id + "_play");
+			if(vid)      vid.pause();
+			if(vid_play) vid_play.textContent = "Paused";
 		});
 		wsio.on('videoEnded', function(data) {
-			document.getElementById(data.id).pause();
-			document.getElementById(data.id + "_play").textContent = "Paused";
+			var vid      = document.getElementById(data.id);
+			var vid_play = document.getElementById(data.id + "_play");
+			if(vid)      vid.pause();
+			if(vid_play) vid_play.textContent = "Paused";
 		});
 		
 		wsio.on('videoMuted', function(data) {
-			document.getElementById(data.id).muted = true;
-			document.getElementById(data.id + "_mute").innerHTML = "&#x2717;";
+			var vid      = document.getElementById(data.id);
+			var vid_mute = document.getElementById(data.id + "_play");
+			if(vid)      vid.muted = true;
+			if(vid_mute) vid_mute.innerHTML = "&#x2717;";
 		});
 		
 		wsio.on('videoUnmuted', function(data) {
-			document.getElementById(data.id).muted = false;
-			document.getElementById(data.id + "_mute").innerHTML = "&#x2713;"
+			var vid      = document.getElementById(data.id);
+			var vid_mute = document.getElementById(data.id + "_play");
+			if(vid)      vid.muted = false;
+			if(vid_mute) vid_mute.innerHTML = "&#x2713;"
 		});
 		
 		wsio.on('updateVideoItemTime', function(data) {
-			document.getElementById(data.id).currentTime = data.timestamp;
+			var vid = document.getElementById(data.id);
+			if(vid) vid.currentTime = data.timestamp;
 		});
 		
 		wsio.on('deleteElement', function(elem_data) {
