Work in progress
Former-commit-id: 57aba71f3e3b0b5c3797d5a96990f82403ef0a05

--- a/public/display.html
+++ b/public/display.html
@@ -275,7 +275,7 @@
         });
 		
 		
-		wsio.on('updateMediaStreamFrame', function(data) {
+		wsio.on('updateMediaStreamBlock', function(data) {
 			wsio.emit('receivedMediaStreamFrame', {id: data.id});
 			
 			var app = applications[data.id];
