log file uploads from web interface
Former-commit-id: c1b2b2996eea45f12d7f9d5d639559d9143e5d3b

--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,7 @@
 				clientType: "sageUI",
 				sendsPointerData: true,
 				sendsMediaStreamFrames: true,
+				uploadsContent: true,
 				requestsServerFiles: true,
 				sendsWebContentToLoad: true,
 				launchesWebBrowser: true,
