--- a/public/display.html
+++ b/public/display.html
@@ -25,7 +25,6 @@
 <script type="text/javascript" src="src/websocket.io.js"></script>
 <script type="text/javascript" src="src/Class.js"></script>
 <script type="text/javascript" src="src/SAGE2_App.js"></script>
-<script type="text/javascript" src="src/SAGE2_BlockStreamingApp.js"></script>
 <script type="text/javascript" src="src/SAGE2_runtime.js"></script>
 <script type="text/javascript" src="src/image_viewer.js"></script>
 <script type="text/javascript" src="src/movie_player.js"></script>
@@ -278,18 +277,11 @@
 		
 		
 		wsio.on('updateMediaStreamFrame', function(data) {
-            var appId     = byteBufferToString(data);
-			var blockIdx  = byteBufferToInt(data.subarray(appId.length+1, appId.length+ 3));
-			var date      = byteBufferToInt(data.subarray(appId.length+3, appId.length+11));
-            var yuvBuffer = data.subarray(appId.length+11, data.length);
+			wsio.emit('receivedMediaStreamFrame', {id: data.id});
 			
-			if(applications[appId] !== undefined && applications[appId] !== null){
-				applications[appId].textureData(blockIdx, yuvBuffer);
-				if(applications[appId].receivedBlocks.every(isTrue) === true){
-					applications[appId].draw(new Date(date));
-					applications[appId].setValidBlocksFalse();
-                    wsio.emit('receivedMediaStreamFrame', {id: appId});
-				}
+			var app = applications[data.id];
+			if(app !== undefined && app !== null){
+				app.load(data.state);
 			}
 		});
 		
@@ -390,7 +382,7 @@
 			ui.main.appendChild(windowItem);
 			
 			// App launched in window 
-			if(data.application === "media_stream") wsio.emit('receivedMediaStreamFrame', {id: data.id, newClient: true});
+			if(data.application === "media_stream") wsio.emit('receivedMediaStreamFrame', {id: data.id});
 			
 			// convert url if hostname is alias for current origin
 			var url = cleanURL(data.url);
