--- a/public/display.html
+++ b/public/display.html
@@ -58,6 +58,7 @@
 	var controlItems = {};
 	var controlObjects = {};
 	var lockedControlElements = {} ;
+	var widgetConnectorRequestList = [];
 
 	var canvasItems  = {};
 
@@ -733,59 +734,26 @@
 		});
 
 		wsio.on('showWidgetToAppConnector', function(position_data){
-			var hOffset;
-			var selectedAppTitle,re,styleCaption;
-			if (position_data.appData){
-				var appData = position_data.appData;
-				selectedAppTitle = document.getElementById(appData.id + "_title");
-				re = /\.|\:/g;
-				styleCaption = position_data.user_id.split(re).join("");
-				selectedAppTitle.className = "title" + styleCaption;
-				var eLeft = position_data.left - ui.offsetX;
-				var eTop = position_data.top - ui.offsetY;
-				
-				hOffset = (ui.titleBarHeight + appData.height)/2;
-				moveWidgetToAppConnector(position_data.id, eLeft+position_data.height/2.0, eTop+position_data.height/2.0, appData.left-ui.offsetX + appData.width/2.0, appData.top-ui.offsetY+hOffset,position_data.height/2.0, position_data.user_color);
-			}
-			else if (position_data.id in controlObjects){
-				selectedAppTitle = document.getElementById(position_data.id + "_title");
-				re = /\.|\:/g;
-				styleCaption = position_data.user_id.split(re).join("");
-				selectedAppTitle.className = "title" + styleCaption;
-				hOffset = (ui.titleBarHeight + position_data.height)/2;
-				for (var item in controlItems){
-					if (item.indexOf(position_data.id) > -1 && controlItems[item].show){
-						var control = controlItems[item].divHandle;
-						var cLeft = parseInt(control.style.left);
-						var cTop = parseInt(control.style.top);
-						var cHeight = parseInt(control.style.height);
-						moveWidgetToAppConnector(item, cLeft + cHeight/2.0, cTop + cHeight/2.0, position_data.left-ui.offsetX + position_data.width/2.0, position_data.top-ui.offsetY+hOffset,cHeight/2.0, position_data.user_color);
-					}
-				}
-			}
-			
+			moveAndShowWidgetToAppConnector(position_data);
+			widgetConnectorRequestList.push(position_data);
 		});
 
 
 		wsio.on('hideWidgetToAppConnector', function(control_data){
-			var selectedAppTitle;
-			if (control_data.appId){
-				hideWidgetToAppConnector(control_data.id);
-				selectedAppTitle = document.getElementById(control_data.appId + "_title");
-				selectedAppTitle.className = "windowTitle";
-			}
-			else if (control_data.id in controlObjects){
-				selectedAppTitle = document.getElementById(control_data.id + "_title");
-				selectedAppTitle.className = "windowTitle";
-				for (var item in controlItems){
-					console.log(item);
-					if (item.indexOf(control_data.id) > -1){
-						console.log(item);
-						hideWidgetToAppConnector(item);
+			if (widgetConnectorRequestList.length > 1){
+				var len = widgetConnectorRequestList.length;
+				for(var i=len-1;i>=0;i--){
+					if (control_data.user_id === widgetConnectorRequestList[i].user_id){
+						widgetConnectorRequestList.splice(i,1);
+						setAllConnectorColor(widgetConnectorRequestList[len-2]);
+						break;
 					}
 				}
 			}
-			
+			else if (widgetConnectorRequestList.length === 1){
+				widgetConnectorRequestList.splice(0,1);
+				hideAllWidgetToAppConnector(control_data);
+			}
 		});
 
 		wsio.on('setItemPositionAndSize', function(position_data) {
