Widget code split into multiple files
Former-commit-id: b032eb1841c4298a9065885638f1770111c9ab73

--- a/public/display.html
+++ b/public/display.html
@@ -37,7 +37,10 @@
 <script type="text/javascript" src="src/ui_builder.js"></script>
 
 <script type="text/javascript" src="src/pointer.js"></script>
-<script type="text/javascript" src="src/widgets.js"></script>
+<script type="text/javascript" src="src/SAGE2_WidgetButtonTypes.js"></script>
+<script type="text/javascript" src="src/SAGE2_WidgetControl.js"></script>
+<script type="text/javascript" src="src/SAGE2_WidgetControlInstance.js"></script>
+<script type="text/javascript" src="src/widgetHelperFunctions.js"></script>
 <script type="text/javascript" src="src/radialMenu.js"></script>
 <script type="text/javascript" src="src/SAGE2_Display.js"></script>
 
