--- a/public/display.html
+++ b/public/display.html
@@ -42,6 +42,7 @@
 <script type="text/javascript" src="src/SAGE2_WidgetControlInstance.js"></script>
 <script type="text/javascript" src="src/widgetHelperFunctions.js"></script>
 <script type="text/javascript" src="src/radialMenu.js"></script>
+<script type="text/javascript" src="src/SAGE2_DataSharing.js"></script>
 <script type="text/javascript" src="src/SAGE2_Display.js"></script>
 
 </head>
