Testing pwd with cookies in header
Former-commit-id: ccdcb41de952f7683b52363e741e3ac5f8e3f022
Former-commit-id: 06b21e01385dd6fd44a2b8b45eeeecdac9e3d52e

--- a/public/session.html
+++ b/public/session.html
@@ -29,7 +29,11 @@
 
 		console.log("caught a keydown event");
 		if(event.target == document.getElementById('sessionValue') && ( event.keyCode == 13 || event.which == 13 )) {
-			window.location.href = "index.html?session="+document.getElementById('sessionValue').value;
+			document.cookie = "session=" +document.getElementById('sessionValue').value ;
+			document.cookie = "bugus=junk" ;
+			document.cookie = "number=" + 2 ;
+			//console.log(document.cookie);
+			window.location.href = "index.html";
 		}
 	}
 
@@ -39,10 +43,13 @@
 
 <body onload="setupListener()">
 
-	<h1>This SAGE2 wall has a session lock on it.
+
+	<h1 style="font-family:arial;text-align:center">This SAGE2 wall has a session lock on it.
 	</h1>
+
+	<br>
 	
-	<h3>
+	<h3 style="font-family:arial;text-align:center">
 		Enter the sessionID:<br>
 		<input type="text" id="sessionValue" size="40" style="font-size: 1em;" tabindex="1">
 	</h3>
