updated console.html with new websocket api requirements
Former-commit-id: ce84bfa614a17766ea82320201d47df4e6982b47
Former-commit-id: ea01e4232068501046cb0a898cce34e5ebb79708

--- a/public/admin/console.html
+++ b/public/admin/console.html
@@ -40,6 +40,9 @@
 		
 		wsio.open(function() {
 			console.log("open websocket");
+
+			setupListeners();
+
 			var clientDescription = {
 				clientType: "consoleManager",
 				receivesDisplayConfiguration: true,
@@ -67,7 +70,9 @@
 				xhr.send();
 			}, 2000);
 		});
+	}
 
+	function setupListeners() {
 		wsio.on('initialize', function(data) {
 			var serverTime = new Date(data.time);
 			var clientTime = new Date();
@@ -110,6 +115,7 @@
 	}
 	
 	function createConsole() {
+
 	}
 
 </script>
