Reads sessionID from config file and allows session.html to take url param
Former-commit-id: eb0f10a04c0a8e23f20ef5d4a25369f1d6ebc27c
Former-commit-id: 60c6a25512cef6fc77370bbd9338ec63a72b9439

--- a/public/session.html
+++ b/public/session.html
@@ -23,6 +23,18 @@
 	function setupListener() {
 		document.getElementById('sessionValue').addEventListener('keydown', keyDownDKHandler,    false);
 		document.getElementById('sessionValue').focus();
+
+		var allParams = window.location.search.substring(1);
+		var paramArray = allParams.split("&");
+		var nameAndValue;
+		for(var i = 0; i < paramArray.length; i++) {
+			nameAndValue = paramArray[i].split("=");
+			if( typeof nameAndValue[0] === "string" && nameAndValue[0] === "sid" ) {
+				document.getElementById('sessionValue').value = nameAndValue[1];
+				document.cookie = "session=" +document.getElementById('sessionValue').value ;
+				window.location.href = "index.html";
+			}
+		}
 	}
 
 	function keyDownDKHandler(event) {
