--- a/public/session.html
+++ b/public/session.html
@@ -27,15 +27,23 @@
 		var allParams = window.location.search.substring(1);
 		var paramArray = allParams.split("&");
 		var nameAndValue;
+		var foundPassword = false;
+		var pageRedirect = null;
+
 		for(var i = 0; i < paramArray.length; i++) {
 			nameAndValue = paramArray[i].split("=");
 			if( typeof nameAndValue[0] === "string" && nameAndValue[0] === "sid" ) {
 				document.getElementById('sessionValue').value = nameAndValue[1];
 				document.cookie = "session=" +document.getElementById('sessionValue').value ;
-				window.location.href = "index.html";
+				foundPassword = true;
+			}
+			if( typeof nameAndValue[0] === "string" && nameAndValue[0] === "page" ) {
+				pageRedirect = nameAndValue[1];
 			}
 		}
-	}
+		if(pageRedirect != null) { window.location.href = pageRedirect; }
+		if( foundPassword ) { window.location.href = "index.html"; }
+	} //end setup listener
 
 	function keyDownDKHandler(event) {
 
