Add/Remove marker button for notes
Former-commit-id: ad7ba37f8e53c795129604c84abc3ff974af9f25
Former-commit-id: ead57fa39b3feb0baf5607b3c75879881a84aab8

--- a/public/display.html
+++ b/public/display.html
@@ -21,6 +21,8 @@
 <script type="text/javascript" src="lib/snap.svg-min.js"></script>
 <script type="text/javascript" src="lib/glMatrix-0.9.5.min.js"></script>
 <script type="text/javascript" src="lib/observe.poly.js"></script>
+<script type="text/javascript" src="lib/moment.min.js"></script>
+
 
 <script type="text/javascript" src="src/websocket.io.js"></script>
 <script type="text/javascript" src="src/Class.js"></script>
