added DynamicImage class for images that change src attribute
Former-commit-id: 7a2d70f7d13ddd5ae4b816563bfd8d78ca02e9c6
Former-commit-id: b56779cc98e383d0331dab7a3450a5533acc3163

--- a/public/display.html
+++ b/public/display.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="lib/observe.poly.js"></script>
 
 <script type="text/javascript" src="src/websocket.io.js"></script>
+<script type="text/javascript" src="src/DynamicImage.js"></script>
 <script type="text/javascript" src="src/Class.js"></script>
 <script type="text/javascript" src="src/SAGE2_App.js"></script>
 <script type="text/javascript" src="src/SAGE2_BlockStreamingApp.js"></script>
