Changes to test and session now stored as hash
Former-commit-id: a4969615bad5851a907de7244f2fc1478b16eb67
Former-commit-id: 272254c0bbf245f1d47ced101b317221faf97a55

--- a/public/md5test.html
+++ b/public/md5test.html
@@ -22,7 +22,7 @@
 	</form>
 
 
-	<script  type="text/javascript" src="md5.js"></script>
+	<script  type="text/javascript" src="src/md5.js"></script>
 	<script  type="text/javascript" >
 
 		document.getElementById('calculate').addEventListener('click', getMd5Hash,    false);
