fixed the button
Former-commit-id: 6ae14183aee1f476ed23e38db73672c8cb8ff9eb
Former-commit-id: f0bbad90f12515ad79e1aceb0a9daed08132b42e

--- a/public/session.html
+++ b/public/session.html
@@ -54,21 +54,23 @@
 	} //end setup listener
 
 	function keyDownDKHandler(event) {
-
 		console.log("caught a keydown event");
 		if(event.target == document.getElementById('sessionValue') && ( event.keyCode == 13 || event.which == 13 )) {
-      processAndRedirect(document.getElementById('sessionValue').value, "index.html", null);
+			processAndRedirect(document.getElementById('sessionValue').value, "index.html", null);
 		}
-
 	}
 
-  function processAndRedirect(session, location, hash) {
-    if(hash == null) { hash = md5(session); }
-    //console.log("Session:" + session);
-    //console.log("Hash:"+hash);
-    document.cookie = "session=" + hash;
-    window.location.href = location;
-  }
+	function processAndRedirect(session, location, hash) {
+		if(hash == null) { hash = md5(session); }
+		//console.log("Session:" + session);
+		//console.log("Hash:"+hash);
+		document.cookie = "session=" + hash;
+		window.location.href = location;
+	}
+
+	function buttonSubmit() {
+		processAndRedirect(document.getElementById('sessionValue').value, "index.html", null);
+	}
 
 </script>
 
