--- a/public/session.html
+++ b/public/session.html
@@ -88,7 +88,7 @@
 		Enter the sessionID:<br>
 		<input type="text" id="sessionValue" size="40" style="font-size: 1em;" tabindex="1">
     <br>
-    <button type="button" id="enterButton" style="height:10%; width:10%" > Enter </button>
+    <button type="button" id="enterButton" style="height:10%; width:10%" onclick="buttonSubmit()"> Enter </button>
 	</h3>
 
 </body>
