fixed error with page param
Former-commit-id: c7f5c081421470b5bbee2ae36872f740f9b2e193
Former-commit-id: e237d0706e934ed1504a1c41a19011ab89fd8898

--- a/public/session.html
+++ b/public/session.html
@@ -36,13 +36,13 @@
 
 		for(var i = 0; i < paramArray.length; i++) {
 			nameAndValue = paramArray[i].split("=");
-			if( typeof nameAndValue[0] === "string" && nameAndValue[0] === "sid" ) {
+			if( typeof nameAndValue[0] === "string" && nameAndValue[0] === "session" ) {
 				document.getElementById('sessionValue').value = nameAndValue[1];
 				foundPassword = true;
-        sessionParam = nameAndValue[1];
+        		sessionParam = nameAndValue[1];
 			}
 			if( typeof nameAndValue[0] === "string" && nameAndValue[0] === "page" ) {
-				pageRedirect = nameAndValue[1];
+				pageRedirect = nameAndValue[1] + "=" + nameAndValue[2];
 			}
       if( typeof nameAndValue[0] === "string" && nameAndValue[0] === "hash" ) {
         hashParam = nameAndValue[1];
