Sticky Note added to Web UI, creating a new note and loading a saved note
Former-commit-id: 731ab6c09bb5f75204b3a4f24cef180640885e86
Former-commit-id: 61ec0921ad5de2c4efb5a3dc392dbc2b90eab2d6

--- a/public/display.html
+++ b/public/display.html
@@ -34,6 +34,7 @@
 <script type="text/javascript" src="src/image_viewer.js"></script>
 <script type="text/javascript" src="src/movie_player.js"></script>
 <script type="text/javascript" src="src/pdf_viewer.js"></script>
+<script type="text/javascript" src="src/sticky_note.js"></script>
 <script type="text/javascript" src="src/media_stream.js"></script>
 <script type="text/javascript" src="src/media_block_stream.js"></script>
 <script type="text/javascript" src="src/ui_builder.js"></script>
