--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,10 @@
 						<img id="info"         alt="info"         src="images/ui/[graycircle]-info.svg"         width="48" height="48"/>
 						<p id="infoLabel">Information</p>
 					</td>
+					<td id="noteContainer">
+						<img id="note"         alt="note"         src="images/ui/[graycircle]-stickynote.svg"         width="48" height="48"/>
+						<p id="noteLabel">Note</p>
+					</td>
 				</tr>
 			</table>
 		</div>
@@ -156,6 +160,11 @@
 						<input type="checkbox" id="pdfs-dir">
 						<label for="pdfs-dir">PDFs</label>
 						<ul id="pdfs" class="fileItem"></ul>
+					</li>
+					<li>
+						<input type="checkbox" id="notes-dir">
+						<label for="notes-dir">Notes</label>
+						<ul id="notes" class="fileItem"></ul>
 					</li>
 					<li>
 						<input type="checkbox" id="videos-dir">
