--- a/public/session.html
+++ b/public/session.html
@@ -29,13 +29,13 @@
 
 <body onload="SAGE2_init()">
 
-	<h1 style="text-align:center">This SAGE2 wall has a session lock on it.
+	<h1 style="text-align:center">The meeting held at this SAGE2 wall is currently locked.
 	</h1>
 
 	<br>
 	
 	<h3 style="text-align:center">
-		Enter the sessionID:<br>
+		Enter the meeting password:<br>
 		<input type="text" id="sessionValue" size="40" style="font-size: 1em;" tabindex="1">
     <br>
 
