password hide and redirect from previous page
Former-commit-id: f54e734c7853b8587be51c7b8e50f51d0e00fab8
Former-commit-id: 40f553465ccefd928cf0c3be3a729b8949992a1e

--- a/public/session.html
+++ b/public/session.html
@@ -36,7 +36,7 @@
 	
 	<h3 style="text-align:center">
 		Enter the meeting password:<br>
-		<input type="text" id="sessionValue" size="40" style="font-size: 1em;" tabindex="1">
+		<input type="password" id="sessionValue" size="40" style="font-size: 1em;" tabindex="1">
     <br>
 
     <button class="button_session" type="button" id="enterButton" onclick="buttonSubmit()"> Enter </button>
