Script and visual fixes
Former-commit-id: 1a00c1b8546a9063dead33bbacbd75c3e7638bee
Former-commit-id: e944566f6b229d9c59155c4d47b746fc69e0e116

--- a/public/webcon.html
+++ b/public/webcon.html
@@ -51,7 +51,7 @@
         top:20%;
         left:25%
         '>
-        <h1 >Start SAGE2</h1>
+        <h1 >Start</h1>
     </div>
 
     <div onclick="stopSage()"
@@ -65,7 +65,7 @@
         top:32%;
         left:25%
         '>
-        <h1>Stop SAGE2</h1>
+        <h1>Stop</h1>
     </div>
     <div onclick="toggleDivView('expSetPassword')"
         style='
